--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="#home" id="navbar__logo">Grocery Saverr</a>
+        <a href="#home" id="navbar__logo">Grocery Saver</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
