--- a/index.html
+++ b/index.html
@@ -75,9 +75,35 @@
     <div id="shop-wrap">
       <!-- (A) ADD NEW ITEM -->
       <form id="shop-form">
-        <input type="text" id="shop-item" placeholder="Item Name" required disabled/>
+        <select id="shop-item" placeholder = "Select an Item">
+          <option value="Apple">Apple</option>
+          <option value="Orange">Orange</option>
+          <option value="Lemon">Lemon</option>
+          <option value="Milk">Milk</option>
+          <option value="Blueberries">Blueberries</option>
+          <option value="Bananas">Bananas</option>
+          <option value="Papaya">Papaya</option>
+          <option value="Avacado">Avacado</option>
+          <option value="Plantain">Plantain</option>
+          <option value="red mango">red mango</option>
+          <option value="tomato">tomato</option>
+          <option value="potato">potato</option>
+          <option value="onion">onion</option>
+          <option value="spinach">spinach</option>
+          <option value="brocolli">brocolli</option>
+          <option value="salad">salad</option>
+          <option value="zuccini">zuccini</option>
+          <option value="sprouts">sprouts</option>
+          <option value="carrots">carrots</option>
+          <option value="asparagus">asparagus</option>
+          <option value="bread">bread</option>
+          <option value="eggs">eggs</option>
+          </select>
+        <!-- <input type="text" id="shop-item" placeholder="Item Name" required disabled/> -->
         <input type="submit" id="shop-add" value="Add" disabled/>
       </form>
+
+
 
       <!-- (B) SHOPPING LIST -->
       <div id="shop-list"></div>
